# NPersona

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  PIPELINE_TRACE.md  README.md  SYSTEM_FLOW.md  TROUBLESHOOTING.md  library.md  pyproject.toml  setup.py
backend/: requirements.txt  run.py
backend/app/: config.py  database.py  main.py
backend/app/api/: coverage.py  export.py  jobs.py  personas.py  stream.py  upload.py
backend/app/models/: __init__.py  graph.py  job.py  persona.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/: coverage_analyzer.py  document_parser.py  graph_builder.py  graph_store.py  llm_client.py  persona_generator.py  scoring.py
backend/app/taxonomy/: __init__.py  master_taxonomy.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: BuildingView.tsx  GraphCanvas.tsx  GraphView.tsx  JobDashboard.tsx  PersonasView.tsx  Providers.tsx  UploadForm.tsx
frontend/src/hooks/: useApi.ts  useJobValidator.ts  useSSE.ts
frontend/src/lib/: animations.ts  api.ts  colors.ts
frontend/src/stores/: appStore.ts
npersona/: CHANGELOG.md  README.md  SECURITY.md  USER_GUIDE.md  __init__.py  cache.py  cli.py  client.py  exceptions.py
npersona/adapters/: bedrock_agent.py  json_post.py  openai_chat.py
npersona/corpus/: __init__.py  known_attacks.py
npersona/integrations/: deepeval.py
npersona/llm/: client.py
npersona/models/: config.py  profile.py
npersona/npersona/: config.py
npersona/parsers/: docx.py  text.py
npersona/pipeline/: auth_handler.py  evaluator.py  executor.py  generator.py  mapper.py  reporter.py
npersona/prompts/: generator.py  profiler.py  rca.py
npersona/taxonomy/: __init__.py
npersona/tests/: test_evaluator.py  test_generator_filters.py  test_mapper.py  test_models.py  test_models_and_adapters.py
tests/: test_cache.py  test_corpus.py  test_executor.py  test_integration_e2e.py  test_integrations.py  test_oauth2_auth.py  test_parsers.py  test_real_api.py
(+33 files in other folders)
