[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npersona"
version = "1.0.4"
description = "AI Security Testing Framework - Comprehensive adversarial testing for AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "NPersona-AI", email = "npersona.ai@gmail.com" }]
keywords = ["ai", "security", "testing", "adversarial", "llm", "prompt-injection", "jailbreak"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pydantic>=2.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0"]
docx = ["python-docx>=1.1.0"]
all = ["pypdf>=4.0.0", "python-docx>=1.1.0"]
deepeval = ["deepeval>=0.21.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
npersona = "npersona.cli:main"

[project.urls]
Homepage = "https://github.com/NPersona-AI/NPersona"
Repository = "https://github.com/NPersona-AI/NPersona.git"
Issues = "https://github.com/NPersona-AI/NPersona/issues"
Documentation = "https://github.com/NPersona-AI/NPersona#documentation"
Discussions = "https://github.com/NPersona-AI/NPersona/discussions"

[tool.setuptools.packages.find]
where = ["."]
include = ["npersona*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
